--- a/ProjectX/Info.plist
+++ b/ProjectX/Info.plist
@@ -2,16 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Asking for camera</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Asking for your location</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Asking for your location</string>
-	<key>NSCalendarsUsageDescription</key>
-	<string>Add events to your calerdar</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>ProjectX</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -28,6 +22,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Add events to your calerdar</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Asking for camera</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Asking for your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Asking for your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
