--- a/ProjectX/GoogleService-Info.plist
+++ b/ProjectX/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1023435081630-qrll0kbabrhpedrpaic2smvf1t1bu6dm.apps.googleusercontent.com</string>
+	<string>1023435081630-57it7hctb6r2859t879vk9lfedg6nnpk.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1023435081630-qrll0kbabrhpedrpaic2smvf1t1bu6dm</string>
+	<string>com.googleusercontent.apps.1023435081630-57it7hctb6r2859t879vk9lfedg6nnpk</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBS_Xlg0JnaZvuB7F3wrlQtLKB1dQYzRyg</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.fb.Charge.ProjectX</string>
+	<string>com.fb.ProjectX</string>
 	<key>PROJECT_ID</key>
 	<string>project-x-81d1d</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1023435081630:ios:c757c32fa3ab748d</string>
+	<string>1:1023435081630:ios:5bf51025955bfb9c</string>
 	<key>DATABASE_URL</key>
 	<string>https://project-x-81d1d.firebaseio.com</string>
 </dict>
