--- a/ProjectX.xcodeproj/xcshareddata/xcschemes/Siri.xcscheme
+++ b/ProjectX.xcodeproj/xcshareddata/xcschemes/Siri.xcscheme
@@ -58,7 +58,7 @@
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      intentQueryString = "Look for events around me"
+      intentQueryString = "Look for events around me with Plan It"
       selectedDebuggerIdentifier = ""
       selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
       launchStyle = "0"
@@ -93,7 +93,7 @@
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
-      intentQueryString = "Look for events around me"
+      intentQueryString = "Look for events around me with Plan It"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
